--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
     -->
     <link rel="stylesheet" href="../src/App.css" />
     <title>React App</title>
+    <script
+      src="//widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
