--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="../src/App.css" />
+    <script
+      src="//widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
     <title>React App</title>
   </head>
   <body>
